# LiquidiumBar

./: .gitignore  LICENSE  README.md  biome.json  components.json  dither-kit.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
docs/: COMPATIBILITY.md  RELEASE.md  SDK_CAPABILITIES.md  SECURITY.md  UPDATER_TEST.md
scripts/: generate-updater-manifest.d.mts  generate-updater-manifest.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater-test.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: ActivityView.tsx  App.tsx  AssetIcon.tsx  DisplayModeSwitcher.tsx  DitherCharts.tsx  InsightsView.tsx  MarketsView.tsx  PortfolioView.tsx  SettingsView.tsx  UpdateAvailableButton.tsx  format.ts  queries.ts  screenshotDemo.ts  storage.ts  updaterManifest.test.ts  updates.test.ts  updates.ts  usePanelLifecycle.ts  useTrayBorrowedTotal.ts  useTrayMarketTotal.ts  views.test.tsx
src/components/dither-kit/: bar-chart.tsx  bar.tsx  chart-context.tsx  dither-paint.ts  pie-canvas.tsx  polar.ts
src/liquidium/: adapter.test.ts  adapter.ts  compatibility.ts  contracts.test.ts  errors.ts  math.test.ts  math.ts  profile.ts  sdk.types.ts
src/test/: fixtures.ts  setup.ts
