[package]
name = "liquidiumbar"
version = "0.1.1"
description = "Liquidium from your menu bar"
authors = ["LiquidiumBar contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "liquidiumbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-positioner = { version = "2.3.3", features = ["tray-icon"] }
tauri-plugin-store = "2.4.3"
